--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "antd": "^5.20.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.5.5",
     "lucide-react": "^0.441.0",
     "next": "14.2.12",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
