--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.441.0",
     "next": "14.2.12",
     "react": "^18",
+    "react-chat-elements": "^12.0.16",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "recharts": "^2.12.7",
