--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.5.5",
+    "http-proxy-middleware": "^3.0.3",
     "lucide-react": "^0.441.0",
     "next": "14.2.12",
     "react": "^18",
